update dark-light theme localstorage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!-- Basic -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>My Profile</title>
+    <title>HNTrung - My Profile</title>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -14,13 +14,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- Load Fonts -->
     <link rel="application/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
+    <link
+        href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
+        rel='stylesheet'>
     <!-- CSS -->
 
 
     <link rel="stylesheet" href="dist/css/style.min.css">
-    <link rel="stylesheet" href="dist/css/orange.css" id="light-mode" />
-    <link rel="stylesheet" href="dist/css/dark.css" id="dark-mode" />
+    <!-- <link rel="stylesheet" href="dist/css/orange.css" id="light-mode" /> -->
+    <link rel="stylesheet" href="dist/css/dark.css" id="dark-mode" disabled />
 </head>
 <style>
 
@@ -52,7 +54,7 @@
                 <label id="switch" class="switch">
                     <input type="checkbox" onchange="toggleTheme()" id="slider">
                     <span class="slider round"></span>
-              </label>
+                </label>
                 <div class="top-menu ">
                     <ul>
                         <li><a href="resume.html " class="lnk ">Resume</a></li>
@@ -72,7 +74,8 @@
                 <div class="centrize full-width ">
                     <div class="vertical-center ">
                         <div class="started-content ">
-                            <div class="h-title glitch-effect " data-text="I'm Trung Ngoc Hoang">I'm <span>Trung Ngoc Hoang</span>
+                            <div class="h-title glitch-effect " data-text="I'm Trung Ngoc Hoang">I'm <span>Trung Ngoc
+                                    Hoang</span>
                             </div>
                             <div class="h-subtitle typing-subtitle">
                                 <p>Front-end Developer!</p>
@@ -94,7 +97,8 @@
                 <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
                 <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
                 <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://www.instagram.com/"><span
+                        class="ion ion-social-instagram-outline"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
