--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 
     <!-- Basic -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Glitche - My Blog</title>
+    <title>HNTrung - My Blog</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -13,12 +13,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Load Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
+    <link
+        href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
+        rel='stylesheet'>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/css/orange.min.css" id="light-mode" />
-    <link rel="stylesheet" href="dist/css/dark.min.css" id="dark-mode" />
+    <!-- <link rel="stylesheet" href="dist/css/orange.min.css" id="light-mode" /> -->
+
     <link rel="stylesheet" href="dist/css/style.min.css">
+    <link rel="stylesheet" href="dist/css/dark.min.css" id="dark-mode" />
 
 </head>
 
@@ -45,6 +48,10 @@
         <header>
             <div class="head-top">
                 <a href="#" class="menu-btn"><span></span></a>
+                <label id="switch" class="switch">
+                    <input type="checkbox" onchange="toggleTheme()" id="slider">
+                    <span class="slider round"></span>
+                </label>
                 <div class="top-menu">
                     <ul>
                         <li><a href="resume.html" class="lnk">Resume</a></li>
@@ -87,11 +94,11 @@
                                 <a href="blog_inner.html">
                                     <img src="src/img/work1.jpg" alt="" />
                                     <span class="info">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="ion ion-ios-book-outline"></span>
-                                    </span>
-                                    </span>
+                                        <span class="centrize full-width">
+                                            <span class="vertical-center">
+                                                <span class="ion ion-ios-book-outline"></span>
+                                            </span>
+                                        </span>
                                     </span>
                                 </a>
                             </div>
@@ -105,11 +112,11 @@
                                 <a href="blog_inner.html">
                                     <img src="src/img/work2.jpg" alt="" />
                                     <span class="info">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="ion ion-ios-book-outline"></span>
-                                    </span>
-                                    </span>
+                                        <span class="centrize full-width">
+                                            <span class="vertical-center">
+                                                <span class="ion ion-ios-book-outline"></span>
+                                            </span>
+                                        </span>
                                     </span>
                                 </a>
                             </div>
@@ -123,11 +130,11 @@
                                 <a href="blog_inner.html">
                                     <img src="src/img/work3.jpg" alt="" />
                                     <span class="info">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="ion ion-ios-book-outline"></span>
-                                    </span>
-                                    </span>
+                                        <span class="centrize full-width">
+                                            <span class="vertical-center">
+                                                <span class="ion ion-ios-book-outline"></span>
+                                            </span>
+                                        </span>
                                     </span>
                                 </a>
                             </div>
@@ -150,7 +157,8 @@
                 <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
                 <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
                 <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://www.instagram.com/"><span
+                        class="ion ion-social-instagram-outline"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
@@ -174,7 +182,7 @@
 
     <!-- Main Scripts -->
     <script src="dist/js/glitche-scripts.js"></script>
-
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
