--- a/blog_inner.html
+++ b/blog_inner.html
@@ -5,7 +5,7 @@
 
     <!-- Basic -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Glitche - Blog Post</title>
+    <title>HNTrung - Blog Post</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -13,13 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Load Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
+    <link
+        href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
+        rel='stylesheet'>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/css/orange.min.css" id="light-mode" />
-    <link rel="stylesheet" href="dist/css/dark.min.css" id="dark-mode" />
+    <!-- <link rel="stylesheet" href="dist/css/orange.min.css" id="light-mode" /> -->
     <link rel="stylesheet" href="dist/css/style.min.css">
-
+    <link rel="stylesheet" href="dist/css/dark.min.css" id="dark-mode" disabled />
 </head>
 
 <body>
@@ -45,6 +46,10 @@
         <header>
             <div class="head-top">
                 <a href="#" class="menu-btn"><span></span></a>
+                <label id="switch" class="switch">
+                    <input type="checkbox" onchange="toggleTheme()" id="slider">
+                    <span class="slider round"></span>
+                </label>
                 <div class="top-menu">
                     <ul>
                         <li><a href="resume.html" class="lnk">Resume</a></li>
@@ -81,17 +86,27 @@
                 <div class="content">
                     <div class="single-post-text">
                         <p>
-                            No dolorem blandit theophrastus eos, nam eu persecuti repudiandae, duo hinc vide aliquip et. Ex atqui voluptatibus eum, cu case intellegebat eum, mea ex regione patrioque signiferumque. Pri ei solet graecis. Ea appetere referrentur vituperatoribus cule,
+                            No dolorem blandit theophrastus eos, nam eu persecuti repudiandae, duo hinc vide aliquip et.
+                            Ex atqui voluptatibus eum, cu case intellegebat eum, mea ex regione patrioque signiferumque.
+                            Pri ei solet graecis. Ea appetere referrentur vituperatoribus cule,
                             vix sanctus meliore cu. Nec in sale prima nostrud.
                         </p>
                         <p><img src="images/blog_1.jpg" alt="" /></p>
                         <p>
-                            Ex audire suavitate has, ei quodsi tacimates sapientem sed, pri zril ubique ut. Te cule tation munere noluisse. Enim torquatos ne pri, eum mollis salutandi corrumpit et, fugit apeirian duo ad. Ad oportere voluptatibus nec, sea ei civibus praesent. At
-                            timeam expetenda inciderint has. Invidunt constituto ne per, paulo omnium quaerendum his eu, cu congue consul cetero cule. Solet honestatis et eum. Euismod consulatu eos eu. Vocent facilis sensibus vel ut, quo an nihil qualisque.
-                            Mea eu nulla prompta. Dicat velit at usu, malis euismod vim an, tollit discere vix in. Ne his eros dolor. Cu illud lorem putent vel. Eum in movet nostrum referrentur. His ne tantas tractatos. Sit eu saperet antiopam.
+                            Ex audire suavitate has, ei quodsi tacimates sapientem sed, pri zril ubique ut. Te cule
+                            tation munere noluisse. Enim torquatos ne pri, eum mollis salutandi corrumpit et, fugit
+                            apeirian duo ad. Ad oportere voluptatibus nec, sea ei civibus praesent. At
+                            timeam expetenda inciderint has. Invidunt constituto ne per, paulo omnium quaerendum his eu,
+                            cu congue consul cetero cule. Solet honestatis et eum. Euismod consulatu eos eu. Vocent
+                            facilis sensibus vel ut, quo an nihil qualisque.
+                            Mea eu nulla prompta. Dicat velit at usu, malis euismod vim an, tollit discere vix in. Ne
+                            his eros dolor. Cu illud lorem putent vel. Eum in movet nostrum referrentur. His ne tantas
+                            tractatos. Sit eu saperet antiopam.
                         </p>
                         <p>
-                            No dolorem blandit theophrastus eos, nam eu persecuti repudiandae, duo hinc vide aliquip et. Ex atqui voluptatibus eum, cu case intellegebat eum, mea ex regione patrioque signiferumque. Pri ei solet graecis. Ea appetere referrentur vituperatoribus cule,
+                            No dolorem blandit theophrastus eos, nam eu persecuti repudiandae, duo hinc vide aliquip et.
+                            Ex atqui voluptatibus eum, cu case intellegebat eum, mea ex regione patrioque signiferumque.
+                            Pri ei solet graecis. Ea appetere referrentur vituperatoribus cule,
                             vix sanctus meliore cu. Nec in sale prima nostrud.
                         </p>
                     </div>
@@ -107,7 +122,8 @@
                                 <div class="desc">
                                     <div class="name">Jesse Pitman</div>
                                     <p>
-                                        An has alterum nominavi. Nam at elitr veritus voluptaria. Cu eum regione tacimates vituperatoribus, ut mutat delenit est.
+                                        An has alterum nominavi. Nam at elitr veritus voluptaria. Cu eum regione
+                                        tacimates vituperatoribus, ut mutat delenit est.
                                     </p>
                                 </div>
                             </li>
@@ -127,7 +143,8 @@
                                 <div class="group-val ct-gr">
                                     <textarea name="message" placeholder="Comment"></textarea>
                                 </div>
-                                <a href="#" class="btn fill" onclick="$('#comment_form').submit(); return false;" data-text="Add Comment">Add Comment</a>
+                                <a href="#" class="btn fill" onclick="$('#comment_form').submit(); return false;"
+                                    data-text="Add Comment">Add Comment</a>
                             </form>
                         </div>
                     </div>
@@ -143,7 +160,8 @@
                 <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
                 <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
                 <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://www.instagram.com/"><span
+                        class="ion ion-social-instagram-outline"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
@@ -167,7 +185,7 @@
 
     <!-- Main Scripts -->
     <script src="dist/js/glitche-scripts.js"></script>
-
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
